k8s/app-manifest/j26-auth/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-auth
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
      : /$2
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - app.dev.j26.se
  #     secretName: j26-app-tls-secret
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: j26-auth
                port:
                  number: 80
